[build-system]
requires = ["setuptools>=58.0"]
build-backend = "setuptools.build_meta"

[tool.yapf]
based_on_style = "google"
allow_split_before_dict_value = false

[tool.pytest.ini_options]
required_plugins = [
    "pytest-xdist",
    "pytest-env>=0.6",
    "buildkite-test-collector"
]
env = [
    "SKYPILOT_DEBUG=1",
    "SKYPILOT_DISABLE_USAGE_COLLECTION=1"
]
addopts = "-s -n 16 -q --tb=short --dist loadgroup --disable-warnings"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.8"
follow_imports = "skip"
ignore_missing_imports = true
allow_redefinition = true
check_untyped_defs = true

[tool.isort]
profile = "google"
line_length = 80
multi_line_output = 0
combine_as_imports = true
use_parentheses = true

[tool.ruff]
# Target Python 3.8 for compatibility
target-version = "py38"
line-length = 80

# Exclude paths that were excluded in the original setup
exclude = [
    "build",
    "sky/skylet/providers/ibm",
    "sky/schemas/generated",
    "tests/unit_tests/test_sky/backends/testdata",
]

[tool.ruff.lint]
# Enabled rule sets:
# F: Pyflakes (undefined names, unused imports)
# E: pycodestyle errors
# W: pycodestyle warnings
# I: isort (import sorting)
# B: flake8-bugbear (common bugs)
# Q: flake8-quotes (quote consistency)
# BLE: flake8-blind-except (broad exception catching)
# ARG: flake8-unused-arguments
# A: flake8-builtins (builtin shadowing)
# SLF: flake8-self (private member access)
# PLC0415: pylint import-outside-toplevel
select = ["F", "E", "W", "I", "B", "Q", "BLE", "ARG", "A", "SLF", "PLC0415"]

# Match pylint's dummy variable pattern: _, __, _var, unused_*, dummy_*
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|unused_.*|dummy_.*)$"

# Globally ignored rules
ignore = [
    # E501: line-too-long - pylint wasn't effectively enforcing this due to
    # cascading `# pylint: disable=line-too-long` comments that suppressed
    # violations for the rest of each file. Disabling to match de facto behavior.
    "E501",
    # E731: Allow lambda assignment (common pattern)
    "E731",
    # B008: function call in default argument (common pattern in click)
    "B008",
    # B904: raise-without-from-inside-except (too many changes)
    "B904",
    # B007: unused-loop-control-variable (often intentional)
    "B007",
    # B011: assert-false (can be intentional)
    "B011",
    # Q003: avoidable-escaped-quote (keep existing style)
    "Q003",
]

[tool.ruff.lint.pycodestyle]
# Ignore long lines in TODO/FIXME comments (matches pylint behavior)
ignore-overlong-task-comments = true

# Per-file ignores for specific patterns
[tool.ruff.lint.per-file-ignores]
# Allow unused imports and late imports in __init__.py files
"__init__.py" = ["F401", "F403", "E402"]  # unused-import, undefined-local-with-import-star, module-import-not-at-top-of-file
# Tests can have more relaxed rules
"tests/**" = ["F401", "F403", "B", "E402"]  # unused-import, undefined-local-with-import-star, bugbear, module-import-not-at-top-of-file
# Template file with placeholders that get string-formatted
"sky/backends/monkey_patches/*.py" = ["F821", "ARG001"]  # undefined-name, unused-function-argument
# Signal handlers must accept (signum, frame) even if unused
"sky/server/requests/executor.py" = ["ARG001"]  # unused-function-argument
# Provision decorators use provider_name for routing
"sky/provision/__init__.py" = ["ARG001"]  # unused-function-argument

[tool.ruff.lint.isort]
# Match isort's Google profile behavior
# NOTE: Ruff doesn't support group_by_package yet, so import ordering may
# differ slightly from isort. See: https://github.com/astral-sh/ruff/issues/13389
force-single-line = true
single-line-exclusions = ["typing"]
force-sort-within-sections = true
order-by-type = false
known-first-party = ["sky"]

[tool.ruff.lint.flake8-quotes]
# Match pylint-quotes configuration
inline-quotes = "single"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
# Configure formatter to match YAPF Google style as closely as possible
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
