[build-system]
requires = ["setuptools>=58.0"]
build-backend = "setuptools.build_meta"

[tool.yapf]
based_on_style = "google"
allow_split_before_dict_value = false

[tool.pytest.ini_options]
required_plugins = [
    "pytest-xdist",
    "pytest-env>=0.6",
    "buildkite-test-collector"
]
env = [
    "SKYPILOT_DEBUG=1",
    "SKYPILOT_DISABLE_USAGE_COLLECTION=1"
]
addopts = "-s -n 16 -q --tb=short --dist loadgroup --disable-warnings"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.8"
follow_imports = "skip"
ignore_missing_imports = true
allow_redefinition = true
check_untyped_defs = true

[tool.isort]
profile = "google"
line_length = 80
multi_line_output = 0
combine_as_imports = true
use_parentheses = true

[tool.ruff]
# Target Python 3.8 for compatibility
target-version = "py38"
line-length = 80

# Exclude paths that were excluded in the original setup
exclude = [
    "build",
    "sky/skylet/providers/ibm",
    "sky/schemas/generated",
    "tests/unit_tests/test_sky/backends/testdata",
]

[tool.ruff.lint]
# Enabled rule sets:
# F: Pyflakes (undefined names, unused imports)
# E: pycodestyle errors
# W: pycodestyle warnings
# I: isort (import sorting)
# B: flake8-bugbear (common bugs)
# Q: flake8-quotes (quote consistency)
# BLE: flake8-blind-except (broad exception catching)
# ARG: flake8-unused-arguments
# A: flake8-builtins (builtin shadowing)
# SLF: flake8-self (private member access)
# PLC0415: pylint import-outside-toplevel
select = ["F", "E", "W", "I", "B", "Q", "BLE", "ARG", "A", "SLF", "PLC0415"]

# Match pylint's dummy variable pattern: _, __, _var, unused_*, dummy_*
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|unused_.*|dummy_.*)$"

# Globally ignored rules
ignore = [
    # E731: Allow lambda assignment (common pattern)
    "E731",
    # B008: function call in default argument (common pattern in click)
    "B008",
    # B904: raise-without-from-inside-except (too many changes)
    "B904",
    # B007: unused-loop-control-variable (often intentional)
    "B007",
    # B011: assert-false (can be intentional)
    "B011",
    # Q003: avoidable-escaped-quote (keep existing style)
    "Q003",
]

[tool.ruff.lint.pycodestyle]
# Ignore long lines in TODO/FIXME comments (matches pylint behavior)
ignore-overlong-task-comments = true

# Per-file ignores for specific patterns
[tool.ruff.lint.per-file-ignores]
# Allow unused imports and late imports in __init__.py files
"__init__.py" = ["F401", "F403", "E402"]  # unused-import, undefined-local-with-import-star, module-import-not-at-top-of-file
# Tests can have more relaxed rules
"tests/**" = ["F401", "F403", "B", "E402"]  # unused-import, undefined-local-with-import-star, bugbear, module-import-not-at-top-of-file
# Template file with placeholders that get string-formatted
"sky/backends/monkey_patches/*.py" = ["F821", "ARG001", "E501"]  # undefined-name, unused-function-argument, line-too-long
# Signal handlers must accept (signum, frame) even if unused
"sky/server/requests/executor.py" = ["ARG001"]  # unused-function-argument
# Provision decorators use provider_name for routing
"sky/provision/__init__.py" = ["ARG001"]  # unused-function-argument
# Files with many long lines (originally had cascading pylint disable=line-too-long)
"sky/backends/task_codegen.py" = ["E501"]  # line-too-long (78 violations)
"sky/backends/backend_utils.py" = ["E501"]  # line-too-long (59 violations)
"sky/clouds/aws.py" = ["E501"]  # line-too-long (50 violations)
"sky/ssh_node_pools/deploy/deploy.py" = ["E501"]  # line-too-long (38 violations)
"sky/clouds/gcp.py" = ["E501"]  # line-too-long (38 violations)
"sky/provision/kubernetes/utils.py" = ["E501"]  # line-too-long (24 violations)
"sky/data/mounting_utils.py" = ["E501"]  # line-too-long (15 violations)
"sky/skylet/job_lib.py" = ["E501"]  # line-too-long (13 violations)
"sky/backends/cloud_vm_ray_backend.py" = ["E501"]  # line-too-long (13 violations)
"sky/clouds/azure.py" = ["E501"]  # line-too-long (12 violations)
"sky/provision/gcp/constants.py" = ["E501"]  # line-too-long (10 violations)
"sky/logs/agent.py" = ["E501"]  # line-too-long (7 violations)
"sky/clouds/lambda_cloud.py" = ["E501"]  # line-too-long (7 violations)
"sky/utils/controller_utils.py" = ["E501"]  # line-too-long (6 violations)
"sky/jobs/client/sdk.py" = ["E501"]  # line-too-long (6 violations)
"sky/clouds/utils/scp_utils.py" = ["E501"]  # line-too-long (6 violations)
"sky/adaptors/azure.py" = ["E501"]  # line-too-long (6 violations)
"sky/skylet/constants.py" = ["E501"]  # line-too-long (5 violations)
"sky/provision/kubernetes/instance.py" = ["E501"]  # line-too-long (5 violations)
"sky/utils/kubernetes/kubernetes_deploy_utils.py" = ["E501"]  # line-too-long (4 violations)
"sky/provision/gcp/instance_utils.py" = ["E501"]  # line-too-long (4 violations)
"sky/jobs/server/core.py" = ["E501"]  # line-too-long (4 violations)
"sky/clouds/nebius.py" = ["E501"]  # line-too-long (4 violations)
"sky/server/requests/requests.py" = ["E501"]  # line-too-long (3 violations)
"sky/provision/paperspace/utils.py" = ["E501"]  # line-too-long (3 violations)
"sky/provision/oci/instance.py" = ["E501"]  # line-too-long (3 violations)
"sky/jobs/utils.py" = ["E501"]  # line-too-long (3 violations)
"sky/catalog/data_fetchers/fetch_aws.py" = ["E501"]  # line-too-long (3 violations)
"sky/adaptors/cloudflare.py" = ["E501"]  # line-too-long (3 violations)
# Files with long lines in docstrings/strings (noqa doesn't work inside strings)
"sky/admin_policy.py" = ["E501"]  # docstring example code
"sky/catalog/data_fetchers/fetch_runpod.py" = ["E501"]  # GraphQL query
"sky/clouds/kubernetes.py" = ["E501"]  # regex example in docstring
"sky/provision/slurm/instance.py" = ["E501"]  # bash script strings
"sky/provision/vsphere/common/custom_script.py" = ["E501"]  # bash script
"sky/resources.py" = ["E501"]  # docstring
"sky/skylet/autostop_lib.py" = ["E501"]  # docstring
"sky/skylet/log_lib.py" = ["E501"]  # bash script string
"sky/utils/cluster_utils.py" = ["E501"]  # SSH config string
"sky/utils/message_utils.py" = ["E501"]  # docstring example

[tool.ruff.lint.isort]
# Match isort's Google profile behavior
# NOTE: Ruff doesn't support group_by_package yet, so import ordering may
# differ slightly from isort. See: https://github.com/astral-sh/ruff/issues/13389
force-single-line = true
single-line-exclusions = ["typing"]
force-sort-within-sections = true
order-by-type = false
known-first-party = ["sky"]

[tool.ruff.lint.flake8-quotes]
# Match pylint-quotes configuration
inline-quotes = "single"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
# Configure formatter to match YAPF Google style as closely as possible
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
