[build-system]
requires = ["setuptools>=58.0"]
build-backend = "setuptools.build_meta"

[tool.yapf]
based_on_style = "google"
allow_split_before_dict_value = false

[tool.pytest.ini_options]
required_plugins = [
    "pytest-xdist",
    "pytest-env>=0.6",
    "buildkite-test-collector"
]
env = [
    "SKYPILOT_DEBUG=1",
    "SKYPILOT_DISABLE_USAGE_COLLECTION=1"
]
addopts = "-s -n 16 -q --tb=short --dist loadgroup --disable-warnings"
asyncio_default_fixture_loop_scope = "function"

# ty configuration
[tool.ty.environment]
python-version = "3.9"
[tool.ty.rules]
# Inherit from mypy
unresolved-import = "ignore"
# Ignore the following rules for now, since mypy doesn't raise these errors.
# We will fix these issues by batch, and then enable these rules in the future.
missing-argument = "ignore"
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
possibly-missing-attribute = "ignore"
[tool.ty.src]
exclude = [
    "sky/backends/monkey_patches",
    "examples/admin_policy/example_policy/build",
]
include = [
    "sky",
    "examples/admin_policy/example_policy",
]

[tool.isort]
profile = "google"
line_length = 80
multi_line_output = 0
combine_as_imports = true
use_parentheses = true
