[workspace]
resolver = "2"
members = ["skypilot-utils"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SkyPilot Team"]
license = "Apache-2.0"
repository = "https://github.com/skypilot-org/skypilot"

[workspace.dependencies]
# PyO3 f?r Python-Bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }

# Basis-Bibliotheken
thiserror = "1.0"
anyhow = "1.0"

# Async/Concurrency
tokio = { version = "1.40", features = ["full"] }

# Hashing und Encoding
sha2 = "0.10"
md5 = { version = "0.7", package = "md-5" }
base-x = "0.2"

# I/O
memmap2 = "0.9"

# Logging
log = "0.4"
env_logger = "0.11"

# System-Info
sysinfo = "0.31"
nix = { version = "0.29", features = ["user", "socket"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
