[workspace]
resolver = "2"

members = [
    "crates/core",
    "crates/cloud",
    "crates/cli",
    "crates/server",
    "crates/db",
    "crates/agent",
    "crates/ui",
    "crates/sdk",
    "crates/utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SkyPilot Team <engineering@skypilot.co>"]
license = "Apache-2.0"
repository = "https://github.com/skypilot-org/skypilot-r"
homepage = "https://skypilot.co"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["metrics", "trace"] }
opentelemetry-otlp = "0.14"

# Graph & DAG
petgraph = "0.6"
daggy = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
indicatif = "0.17"
console = "0.15"

# Web Server & API
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

# Cloud SDKs
aws-config = "1.1"
aws-sdk-ec2 = "1.18"
aws-sdk-s3 = "1.17"
google-cloud-default = "0.4"
azure_identity = "0.17"
azure_mgmt_compute = "0.17"
kube = { version = "0.87", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Security & Crypto
rustls = "0.21"
rustls-pemfile = "1.0"
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# SSH & Remote Exec
thrussh = "0.35"
thrussh-keys = "0.24"

# Time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Configuration
config = "0.13"
dotenv = "0.15"

# Utilities
bytes = "1.5"
futures = "0.3"
pin-project = "1.1"
once_cell = "1.19"

# Testing
mockall = "0.12"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
