[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cloud",
    "crates/cli",
    "crates/server",
    "crates/db",
    "crates/agent",
    "crates/ui",
    "crates/sdk",
    "crates/utils",
]

[workspace.package]
version = "0.1.0-alpha"
authors = ["SkyPilot-R Team <engineering@skypilot.co>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/skypilot-org/skypilot-r"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.24"

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
colored = "2.1"
indicatif = "0.17"

# HTTP/gRPC
axum = "0.7"
tonic = "0.12"
tower = "0.5"
hyper = "1.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"] }
sea-orm = "1.0"

# Cloud SDKs
aws-config = "1.5"
aws-sdk-ec2 = "1.62"
kube = { version = "0.95", features = ["runtime", "derive"] }

# Graph & Scheduling
petgraph = "0.6"
daggy = "0.8"

# Security
rustls = "0.23"
jsonwebtoken = "9.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
