[package]
name = "stix-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
jsonwebtoken = "9.2"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "collaboration"
path = "examples/collaboration.rs"
