[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sky_rs"
description = "High-performance Rust utilities for SkyPilot"
authors = [{name = "SkyPilot Team"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[tool.maturin]
module-name = "sky_rs"
python-source = "python"
features = ["pyo3/extension-module"]
strip = true

# Platform-specific builds
[tool.maturin.target.x86_64-unknown-linux-gnu]
manylinux = "2_28"

[tool.maturin.target.aarch64-unknown-linux-gnu]
manylinux = "2_28"
