[package]
name = "styx-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
styx-core = { path = "../core" }

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait.workspace = true

# Database
sqlx.workspace = true
sea-orm.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
