[package]
name = "styx-ghost"
version = "1.0.0"
edition = "2021"
authors = ["Styx Team"]
description = "Ghost - Isolated execution caves for running code in containers"

[dependencies]
# Core
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Async
async-trait = { workspace = true }
futures = "0.3"

# Docker
bollard = "0.17"

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Secrets
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP
reqwest = { workspace = true }
axum = { workspace = true }
tower-http = "0.5"

# WebSocket
tokio-tungstenite = "0.23"

# CLI
clap = { workspace = true }
colored = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
