[package]
name = "styx-git"
version = "0.1.0"
edition = "2021"
description = "Self-hosted Git service - Gogs reimplemented in Rust"

[[bin]]
name = "styx-git"
path = "src/bin/main.rs"

[dependencies]
# Core
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Web Framework
axum = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Git
git2 = "0.19"
gix = "0.66"  # Pure Rust Git implementation

# Database
sqlx = { workspace = true }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# Auth & Security
argon2 = "0.5"
jsonwebtoken = "9.3"
uuid = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Templates
tera = "1.19"
askama = "0.12"

# SSH
russh = "0.44"
russh-keys = "0.44"

# CLI
clap = { workspace = true }
colored = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = { workspace = true }
regex = "1.10"
url = "2.5"
mime_guess = "2.0"

# Email (optional)
lettre = { version = "0.11", optional = true }

# Webhooks
reqwest = { workspace = true }

[features]
default = ["email"]
email = ["lettre"]
