[package]
name = "stix-db"
version = "0.1.0"
edition = "2021"
authors = ["STIX Team"]
description = "STIX db module"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
time = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.0"

[features]
default = ["sqlite"]
sqlite = []
postgres = []
mysql = []
