[package]
name = "stix-skylet"
version = "0.1.0"
edition = "2021"
authors = ["STIX Team"]
description = "STIX skylet module"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
mockall = "0.12"
