[package]
name = "styx-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Config
config = "0.14"

# HTTP Client
reqwest = { workspace = true }

# CLI
clap = { workspace = true }
colored = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Styx dependencies
styx-core = { path = "../core" }
styx-sky = { path = "../sky" }

[[bin]]
name = "styx-llm"
path = "src/bin/main.rs"
