[package]
name = "styx-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "styx-agent"
path = "src/main.rs"

[dependencies]
styx-core = { path = "../core" }
styx-cloud = { path = "../cloud" }

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Networking
reqwest.workspace = true

# System info
sysinfo = "0.33"

[dependencies.num_cpus]
version = "1.16"

