[package]
name = "styx-cloud"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
styx-core = { path = "../core" }

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true

# AWS SDK
aws-config.workspace = true
aws-sdk-ec2.workspace = true

# HTTP for GCP
reqwest.workspace = true

# Kubernetes
kube.workspace = true
k8s-openapi.workspace = true
