[package]
name = "styx-ghost"
version = "1.0.0"
edition = "2021"
authors = ["Styx Team"]
description = "Ghost - Isolated execution caves for running code in containers"

[dependencies]
# Core
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Async
async-trait = { workspace = true }
futures = "0.3"

# Docker
bollard = "0.17"  # Docker SDK for Rust

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Secrets
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# Logging
tracing = { workspace = true }

# HTTP
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
