[package]
name = "styx-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "styx-server"
path = "src/main.rs"

[dependencies]
styx-core = { path = "../core" }
styx-cloud = { path = "../cloud" }

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# gRPC
tonic.workspace = true
prost = "0.13"

# Authentication
jsonwebtoken.workspace = true

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono.workspace = true

[build-dependencies]
tonic-build = "0.12"

[dependencies.uuid]
workspace = true
