[package]
name = "styx-sky"
version = "1.0.0"
edition = "2021"
authors = ["Styx Team"]
description = "Complete SkyPilot Python ? Rust migration"

[dependencies]
# Core
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Async
async-trait = { workspace = true }
futures = "0.3"

# Graph/DAG
petgraph = "0.6"

# Cloud SDKs
aws-config = "1.5"
aws-sdk-ec2 = "1.75"
aws-sdk-s3 = "1.62"
google-cloud-storage = "0.22"
azure_core = "0.20"
azure_storage = "0.20"
azure_storage_blobs = "0.20"
kube = { version = "0.97", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_28"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

# Config
config = "0.14"
toml = "0.8"

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "uuid"] }

# Utilities
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
