[package]
name = "styx-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
styx-core = { path = "../core" }

# Leptos framework
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"

# WASM
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement"] }
console_error_panic_hook = "0.1"

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client (WASM-compatible)
gloo-net = "0.6"
