[project]
name = "browser-use-integration"
version = "0.1.0"
description = "Integration example with browser-use library and agent-sandbox"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-sandbox",
    "browser-use>=0.8.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
agent-sandbox = { path = "../../sdk/python", editable = true }
