[project]
name = "openai-integration"
version = "0.1.0"
description = "OpenAI function calling integration with agent-sandbox for code execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-sandbox",
    "openai>=1.107.1",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
agent-sandbox = { path = "../../sdk/python", editable = true }
